--- a/.env
+++ b/.env
@@ -37,10 +37,10 @@ app.indexPage = ''
 # DATABASE
 #--------------------------------------------------------------------
 
- database.default.hostname = 172.106.0.121
+ database.default.hostname = 
  database.default.database = anuncios
  database.default.username = anuncios
- database.default.password = GEGE1612gege?
+ database.default.password = 
  database.default.DBDriver = MySQLi
  database.default.DBPrefix =
  database.default.port = 3306
